set up the console runner with reasonable VM args